--- a/react/blogapi/package.json
+++ b/react/blogapi/package.json
@@ -20,8 +20,10 @@
     "react-elastic-carousel": "^0.11.1",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^5.2.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "typekit": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
