--- a/react/blogapi/package.json
+++ b/react/blogapi/package.json
@@ -19,8 +19,11 @@
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.11.1",
     "react-owl-carousel": "^2.3.3",
+    "react-player": "^2.8.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1"
   },
   "scripts": {
