--- a/react/blogapi/package.json
+++ b/react/blogapi/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "lodash-move": "^1.1.1",
     "mdbreact": "^5.0.1",
     "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
@@ -25,8 +26,11 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^9.0.0",
     "redux": "^4.0.5",
     "screenfull": "^5.1.0",
+    "scroll-lock": "^2.1.4",
     "styled-components": "^5.2.1",
     "typekit": "^0.1.1"
   },
