--- a/react/blogapi/package.json
+++ b/react/blogapi/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.20",
     "lodash-move": "^1.1.1",
     "mdbreact": "^5.0.1",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
